# High-Performance-ML-Inference-Engine-main

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: benchmark.cpp
examples/: demo.cpp
include/ml_engine/: cuda_kernels.cuh  inference_engine.h  memory.h  optimization.h  simd_ops.h  tensor.h
src/: cuda_kernels.cu  inference_engine.cpp  memory.cpp  optimization.cpp  simd_ops.cpp  tensor.cpp
tests/: main.cpp
